fix padding and z-index

--- a/src/sass/_social.sass
+++ b/src/sass/_social.sass
@@ -31,9 +31,10 @@
 
 @media ( max-width: 768px )
     .social
-        padding: 60px 0 75px
+        padding: 60px 0 100px
         .cases-pagination
             position: relative
+            z-index: 0
             span
                 margin: 0 3px
     .social-boxes
